--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@fullcalendar/timegrid": "^4.4.2",
         "@fullcalendar/timeline": "^4.4.3",
         "@glpi-project/illustrations": "^0.2.0",
-        "@tabler/core": "^1.0.0-beta20",
+        "@tabler/core": "^1.0.0",
         "@tabler/icons-webfont": "^3.29.0",
         "animate.css": "^4.1.1",
         "bootstrap": "^5.3.2",
